--- a/beginning.html
+++ b/beginning.html
@@ -14,10 +14,10 @@
 		<nav class="navtop">
 			<div>
 
-                <a class="logo" href="#whsel"><img src="https://cdn4.iconfinder.com/data/icons/time-date-management/512/schedule_clock-512.png" width="80" height="50" align="left" alt="Logo" /></a>
+                <a class="logo" href="beginning.html"><img src="https://cdn4.iconfinder.com/data/icons/time-date-management/512/schedule_clock-512.png" width="80" height="50" align="left" alt="Logo" /></a>
 				<h1>ФМИ - Управление на график по етажи</h1>
-				<a href="login1.php"><i class="fas fa-sign-in-alt"></i>Вход</a>
-                <a href="register_beg.php"><i class="far fa-registered"></i>Регистрация</a>
+				<a href="login_form.php"><i class="fas fa-sign-in-alt"></i>Вход</a>
+                <a href="register_form.php"><i class="far fa-registered"></i>Регистрация</a>
                 
            
 			</div>
